--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,6 +18,10 @@ on:
 env:
   TF_VAR_project_name: 'hugo'
   TF_PLAN_FILENAME: 'tfplan'
+  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  ARM_USE_OIDC: 'true'
 
 # Required for OIDC login and for posting PR comments
 permissions:
