Add GitHub repository configuration to Static Web App and define related variables

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,12 +16,12 @@ on:
       - 'infra/**'
 
 env:
-  TF_VAR_project_name: 'hugo'
   TF_PLAN_FILENAME: 'tfplan'
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
   ARM_USE_OIDC: 'true'
+  TF_VAR_github_pat: ${{ secrets.GH_PAT }}
 
 # Required for OIDC login and for posting PR comments
 permissions:
