feat: add output formats for search in hugo.toml

--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -79,3 +79,7 @@ title = "vetle.dev"
 # --- POST PAGE WIDGETS ---
 [[params.widgets.page]]
     type = "toc"
+
+# --- OUTPUT FORMATS ---
+[outputs]
+  search = ["HTML", "JSON"]
