--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -103,7 +103,7 @@ title = "Vetle's Tech Chronicles"
 
 ## -- PERMALINKS ---
 [permalinks]
-    post = "/p/:slug/"
+    post = "/post/:slug/"
     page = "/:slug/"
 
 [related]
