--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,22 +6,23 @@ on:
     branches:
       - main
     paths:
-      - 'infra/**'
+      - '**.tf'
   
   # Trigger on pushes (merges) to the main branch
   push:
     branches:
       - main
     paths:
-      - 'infra/**'
+      - '**.tf'
 
 env:
-  TF_PLAN_FILENAME: 'tfplan'
-  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-  ARM_USE_OIDC: 'true'
-  TF_VAR_github_pat: ${{ secrets.GH_PAT }}
+  ARM_CLIENT_ID: ${{ vars.ARM_CLIENT_ID }}
+  ARM_SUBSCRIPTION_ID: ${{ vars.ARM_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ vars.ARM_TENANT_ID }}
+  RESOURCE_GROUP_NAME: ${{ vars.RESOURCE_GROUP_NAME }}
+  STORAGE_ACCOUNT_NAME: ${{ vars.STORAGE_ACCOUNT_NAME }}
+  CONTAINER_NAME: ${{ vars.CONTAINER_NAME }}
+  KEY: ${{ vars.KEY }}
 
 # Required for OIDC login and for posting PR comments
 permissions:
@@ -35,7 +36,10 @@ jobs:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
     # The plan job will only run for pull request events
-    if: github.event_name == 'pull_request'
+    if: >-
+      (github.event_name == 'pull_request')
+      ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/main')
 
     steps:
     - name: Checkout
@@ -44,25 +48,22 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        client-id: ${{ env.ARM_CLIENT_ID }}
+        tenant-id: ${{ env.ARM_TENANT_ID }}
+        subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
 
     - name: Terraform Init
-      run: terraform init
-      working-directory: ./infra
+      run: terraform init -backend-config="resource_group_name=${{ env.RESOURCE_GROUP_NAME }}" -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT_NAME }}" -backend-config="container_name=${{ env.CONTAINER_NAME }}" -backend-config="key=${{ env.KEY }}"
 
     - name: Terraform Validate
       run: terraform validate -no-color
-      working-directory: ./infra
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -out=${{ env.TF_PLAN_FILENAME }}
-      working-directory: ./infra
+      run: terraform plan -no-color -out="tfplan"
       # We continue on error so the PR comment step can report the failure
       continue-on-error: true
 
@@ -98,15 +99,16 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: terraform-plan
-        path: infra/${{ env.TF_PLAN_FILENAME }}
+        path: tfplan
         retention-days: 1
 
   # This job runs only after a PR is merged into main
   apply:
     name: 'Terraform Apply'
+    needs: plan
     runs-on: ubuntu-latest
     # The apply job only runs on a push to main
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.Plan.result == 'success'
 
     steps:
     - name: Checkout
@@ -115,17 +117,20 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        client-id: ${{ env.ARM_CLIENT_ID }}
+        tenant-id: ${{ env.ARM_TENANT_ID }}
+        subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
 
     - name: Terraform Init
-      run: terraform init
-      working-directory: ./infra
+      run: terraform init -backend-config="resource_group_name=${{ env.RESOURCE_GROUP_NAME }}" -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT_NAME }}" -backend-config="container_name=${{ env.CONTAINER_NAME }}" -backend-config="key=${{ env.KEY }}"
+    
+    - name: Download Terraform Plan Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: terraform-plan
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve
-      working-directory: ./infra
+      run: terraform apply -auto-approve "tfplan"
